# Facial-recognition-data-zh-

./: .gitattributes  .gitignore  .nojekyll  AI-10.stp.rar  README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
.github/workflows/: pages.yml
00-入口/: 知识库总览.md  编辑与发布流程.md  资料地图.md
10-硬件规格/: AI-10.md  AI-10W.md  FO101-KIT测试板.md
20-软件开发/: AI-10SDK.md  Java-JNA参考.md  THFaceCropper-SDK.md  软件开发手册.md
30-工具与驱动/: AI-10调试工具.md  串口助手.md  串口驱动.md  工具与驱动总览.md
40-照片下发/: 照片下发总览.md  照片下发软件开发手册.md  照片图片要求.md
50-项目案例/: Cpp完整项目.md  Java完整项目.md  Python完整项目.md  Qt完整项目.md  项目案例总览.md
50-项目案例/源码预览/: Cpp项目文件预览.md  Java项目文件预览.md  Python项目文件预览.md  Qt项目文件预览.md  项目文件预览索引.md
60-PDF全文/: AI-10SDK-全文.md  AI视觉算法模组产品规格书AI-10_V1.1-20250731-全文.md  AI视觉算法模组产品规格书（AI-10W）V1.0-20250812(海外版)-全文.md  FO101-KIT人脸模组测试板工具板规格书V1.1-20250514-全文.md  全文索引.md  照片下发图片要求2024_250305-全文.md  照片下发系列人脸识别模组用户软件开发手册V2.63-20250828-20250917-全文.md
90-附件/: 大文件与发布限制.md  附件索引.md
assets/: docsify-custom.css
assets/pdf-preview/: manifest.json
examples/cpp-face-register/: CMakeLists.txt  README.md
examples/java-face-register/: README.md  pom.xml
examples/qt-face-register/: CMakeLists.txt  README.md
examples/qt-face-register/src/: main.cpp  mainwindow.cpp  mainwindow.h
scripts/: check-kb.ps1  check-pdf-fulltext.ps1  check-pdf-preview.ps1  check-project-examples.ps1  extract-pdf-fulltext.ps1  extract-pdf-fulltext.py  generate-pdf-preview.ps1  generate-pdf-preview.py  generate-project-preview.ps1  generate-project-preview.py  publish-github-pages.ps1  serve-local.ps1
(+8 files in other folders)
